--- a/pom.xml
+++ b/pom.xml
@@ -140,8 +140,14 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2</version>
     </dependency>
-  </dependencies>
 
+    <!-- mybatis分页插件依赖 -->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+  </dependencies>
   <build>
     <finalName>edu.tute</finalName>
     <plugins>
