--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,14 @@
       <artifactId>pagehelper</artifactId>
       <version>4.0.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>edu.tute</finalName>
